# rusted_jetson

./: .env.example  .gitignore  Cargo-deb.toml  Cargo.toml  GETTING_STARTED.md  LICENSE  PLAN.md  README.md  Readme.MD  test_cli_parse.rs
.reuse/: dep5
conductor/: workflow.md
conductor/tracks/bugfix_monitoring_display_20260116/: metadata.json
conductor/tracks/feature_parity_20260112/: metadata.json  plan.md
conductor/tracks/merged_plan_20260118/: metadata.json  plan.md
debian/: postinst  prerm
src/: error.rs  lib.rs  main.rs  main_cli.rs  mock.rs  telemetry.rs  tui.rs
src/modules/: cpu.rs  cpu_new.rs  engine.rs  fan.rs  gpu.rs  hardware.rs  jetson_clocks.rs  memory.rs  mod.rs  nvpmodel.rs  power.rs  power_get_fixed.rs  power_get_only.rs  processes.rs  tegra_stats.rs  temp_get_function.rs  temperature.rs
src/tui/: mod.rs
tests/: cli_tests.rs  lib_integration_tests.rs  monitoring_bench.rs
tui/: app.rs  app.rs.backup  mod.rs  state.rs
tui/screens/: all.rs  control.rs  cpu_screen.rs  gpu.rs  info.rs  memory.rs  mod.rs  power.rs  temperature.rs
tui/widgets/: control.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  power.rs
