[package]
name = "rusted-jetsons"
version = "0.1.0"
edition = "2021"
description = "Fast Rust-based monitoring and control for NVIDIA Jetson devices"
authors = ["Mateusz Krawczuk with work <m.krawczuk@cybrixsystems.com>"]
license = "LGPL-3.0"
repository = "https://github.com/mkrawczuk/rusted-jetsons"
homepage = "https://github.com/mkrawczuk/rusted-jetsons"
readme = "README.md"
keywords = ["jetson", "nvidia", "tegra", "monitoring", "tui", "opentelemetry"]
categories = ["command-line-utilities", "hardware-support"]

[package.metadata.deb]
maintainer = "Mateusz Krawczuk with work <m.krawczuk@cybrixsystems.com>"
depends = "$auto"
section = "utils"
priority = "optional"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"

# TUI dependencies
ratatui = { version = "0.26", features = ["crossterm"], optional = true }
crossterm = { version = "0.27", optional = true }

# OpenTelemetry dependencies
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic"], optional = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
tui = ["ratatui", "crossterm"]
telemetry = ["opentelemetry_sdk", "opentelemetry-otlp"]
full = ["tui", "telemetry"]

[lib]
name = "rusted_jetsons"
path = "src/lib.rs"

[[bin]]
name = "rjtop"
path = "src/main.rs"
required-features = ["tui"]

[[bin]]
name = "rjtop-cli"
path = "src/main_cli.rs"
required-features = []
